--- a/html/frvt_pad.html
+++ b/html/frvt_pad.html
@@ -1969,14 +1969,17 @@ Inquiries and comments may be submitted to <a href="mailto:frvt@nist.gov">frvt@n
 <div id="frvt-1n-identification" class="section level5">
 <h5><a href="https://pages.nist.gov/frvt/html/frvt1N.html">FRVT 1:N Identification</a></h5>
 </div>
+<div id="frvt-demographic-effects" class="section level5">
+<h5><a href="https://nvlpubs.nist.gov/nistpubs/ir/2019/NIST.IR.8280.pdf">FRVT Demographic Effects</a></h5>
+</div>
 <div id="frvt-morph" class="section level5">
 <h5><a href="https://pages.nist.gov/frvt/html/frvt_morph.html">FRVT MORPH</a></h5>
 </div>
 <div id="frvt-quality-assessment" class="section level5">
 <h5><a href="https://pages.nist.gov/frvt/html/frvt_quality.html">FRVT Quality Assessment</a></h5>
 </div>
-<div id="frvt-demographic-effects" class="section level5">
-<h5><a href="https://nvlpubs.nist.gov/nistpubs/ir/2019/NIST.IR.8280.pdf">FRVT Demographic Effects</a></h5>
+<div id="frvt-face-mask-effects" class="section level5">
+<h5><a href="https://pages.nist.gov/frvt/html/frvt_facemask.html">FRVT Face Mask Effects</a></h5>
 </div>
 <div id="frvt-paperless-travel" class="section level5">
 <h5><a href="https://pages.nist.gov/frvt/html/frvt_paperless_travel.html">FRVT Paperless Travel</a></h5>
