--- a/html/frvt_facemask.html
+++ b/html/frvt_facemask.html
@@ -4571,7 +4571,7 @@ Inquiries and comments may be submitted to <a href="mailto:frvt@nist.gov">frvt@n
 <h5><a href="https://pages.nist.gov/frvt/html/frvt_quality.html">FRVT Quality Assessment</a></h5>
 </div>
 <div id="frvt-demographic-effects" class="section level5">
-<h5><a href="https://nvlpubs.nist.gov/nistpubs/ir/2019/NIST.IR.8280.pdf">FRVT Demographic Effects</a></h5>
+<h5><a href="https://pages.nist.gov/frvt/html/frvt_demographics.html">FRVT Demographic Effects</a></h5>
 </div>
 <div id="frvt-paperless-travel" class="section level5">
 <h5><a href="https://pages.nist.gov/frvt/html/frvt_paperless_travel.html">FRVT Paperless Travel</a></h5>
