--- a/html/frvt_pad.html
+++ b/html/frvt_pad.html
@@ -1970,7 +1970,7 @@ Inquiries and comments may be submitted to <a href="mailto:frvt@nist.gov">frvt@n
 <h5><a href="https://pages.nist.gov/frvt/html/frvt1N.html">FRVT 1:N Identification</a></h5>
 </div>
 <div id="frvt-demographic-effects" class="section level5">
-<h5><a href="https://nvlpubs.nist.gov/nistpubs/ir/2019/NIST.IR.8280.pdf">FRVT Demographic Effects</a></h5>
+<h5><a href="https://pages.nist.gov/frvt/html/frvt_demographics.html">FRVT Demographic Effects</a></h5>
 </div>
 <div id="frvt-morph" class="section level5">
 <h5><a href="https://pages.nist.gov/frvt/html/frvt_morph.html">FRVT MORPH</a></h5>
