Fixing bug in URL links

--- a/html/frvt_pad.html
+++ b/html/frvt_pad.html
@@ -1957,37 +1957,36 @@ Contact Information
 Inquiries and comments may be submitted to <a href="mailto:frvt@nist.gov">frvt@nist.gov</a>.</p>
 <a href="mailto:frvt-news+subscribe@list.nist.gov">Subscribe</a> to the FRVT mailing list to receive emails when announcements or updates are made.
 </details>
-<hr />
-<div id="related-nist-projects" class="section level2">
-<h2>Related NIST Projects</h2>
-<div id="frvt-ongoing" class="section level5">
-<h5><a href="https://www.nist.gov/programs-projects/face-recognition-vendor-test-frvt-ongoing">FRVT Ongoing</a></h5>
-</div>
-<div id="frvt-11-verification" class="section level5">
-<h5><a href="https://pages.nist.gov/frvt/html/frvt11.html">FRVT 1:1 Verification</a></h5>
-</div>
-<div id="frvt-1n-identification" class="section level5">
-<h5><a href="https://pages.nist.gov/frvt/html/frvt1N.html">FRVT 1:N Identification</a></h5>
-</div>
-<div id="frvt-demographic-effects" class="section level5">
-<h5><a href="https://pages.nist.gov/frvt/html/frvt_demographics.html">FRVT Demographic Effects</a></h5>
-</div>
-<div id="frvt-morph" class="section level5">
-<h5><a href="https://pages.nist.gov/frvt/html/frvt_morph.html">FRVT MORPH</a></h5>
-</div>
-<div id="frvt-quality-assessment" class="section level5">
-<h5><a href="https://pages.nist.gov/frvt/html/frvt_quality.html">FRVT Quality Assessment</a></h5>
-</div>
-<div id="frvt-face-mask-effects" class="section level5">
-<h5><a href="https://pages.nist.gov/frvt/html/frvt_facemask.html">FRVT Face Mask Effects</a></h5>
-</div>
-<div id="frvt-paperless-travel" class="section level5">
-<h5><a href="https://pages.nist.gov/frvt/html/frvt_paperless_travel.html">FRVT Paperless Travel</a></h5>
+<h2>
+Related NIST Projects
+</h2>
+<h5>
+<a href="https://www.nist.gov/programs-projects/face-recognition-vendor-test-frvt-ongoing">FRVT Ongoing</a>
+</h5>
+<h5>
+<a href="https://pages.nist.gov/frvt/html/frvt11.html">FRVT 1:1 Verification</a>
+</h5>
+<h5>
+<a href="https://pages.nist.gov/frvt/html/frvt1N.html">FRVT 1:N Identification</a>
+</h5>
+<h5>
+<a href="https://pages.nist.gov/frvt/html/frvt_demographics.html">FRVT Demographic Effects</a>
+</h5>
+<h5>
+<a href="https://pages.nist.gov/frvt/html/frvt_morph.html">FRVT MORPH</a>
+</h5>
+<h5>
+<a href="https://pages.nist.gov/frvt/html/frvt_quality.html">FRVT Quality Summarization</a>
+</h5>
+<h5>
+<a href="https://pages.nist.gov/frvt/html/frvt_facemask.html">FRVT Face Mask Effects</a>
+</h5>
+<h5>
+<a href="https://pages.nist.gov/frvt/html/frvt_paperless_travel.html">FRVT Paperless Travel</a>
+</h5>
 <p><br></p>
 <div class="tocify-extend-page" data-unique="tocify-extend-page" style="height: 0;">
 
-</div>
-</div>
 </div>
 
 
