--- a/html/frvt_pad.html
+++ b/html/frvt_pad.html
@@ -1965,7 +1965,7 @@ organization updates their cryptographic signing key. [last update: 2022-08-29]<
 <div id="api-document" class="section level3">
 <h3>API Document</h3>
 <p>A definitive <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api_v1.0.pdf">API
-document</a> has
+document</a> has been published.
 All algorithms submitted must adhere to the published C++ API.
 [last update: 2022-08-29]</p>
 </div>
