--- a/html/frvt_demographics.html
+++ b/html/frvt_demographics.html
@@ -4546,6 +4546,9 @@ Related NIST Projects
 <h5>
 <a href="https://pages.nist.gov/frvt/html/frvt_pad.html">FRVT PAD</a>
 </h5>
+<h5>
+<a href="https://pages.nist.gov/frvt/html/frvt_twins_demonstration.html">FRVT Twins Demonstration</a>
+</h5>
 <p><br></p>
 <div class="tocify-extend-page" data-unique="tocify-extend-page" style="height: 0;">
 
