--- a/html/frvt_pad.html
+++ b/html/frvt_pad.html
@@ -1925,8 +1925,11 @@ _setUpTrackersIfReady()||(document.addEventListener?document.addEventListener("D
 Status
 </h2>
 <p></summary>
-<b>[2022-08-29]</b>
-A second version of the <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api_v1.0.pdf">API and test plan</a> for the FRVT Presentation Attack Detection track has been posted. We are grateful to the organizations that commented on the initial 2022-03-23 draft.
+<b>[2022-09-21]</b>
+A third version of the <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api_v1.1.pdf">API and test plan</a> has been posted, which
+includes additional information on input image and video data, and provides hardware specifications for the timing test.</p>
+<p><b>[2022-08-29]</b>
+A second version of the API and test plan for the FRVT Presentation Attack Detection track has been posted. We are grateful to the organizations that commented on the initial 2022-03-23 draft.
 NIST will run an initial evaluation of software PAD implementations starting on November 1st, 2022 and will accept algorithm submissions between November 1st - 22nd, 2022. Developers may submit up to two PAD implementations to NIST by November 22nd, 2022. NIST will report results some weeks later. At that point, we will determine and announce whether the FRVT PAD evaluation will proceed on an ongoing basis.</p>
 <p>A validation package will be published on <a href="https://github.com/usnistgov/frvt/tree/master">GitHub</a> in the upcoming weeks. The FRVT PAD <a href="https://github.com/usnistgov/frvt/blob/pad/pad/src/include/frvt_pad.h">API header file</a> and <a href="https://github.com/usnistgov/frvt/blob/pad/common/src/include/frvt_structs.h">supporting data structures</a> are currently available under a development branch.</p>
 </details>
