Adding NIST IR and Update facemask html, twins html
Adding NIST IR 8439 - Twins study report.

--- a/html/frvt_twins_demonstration.html
+++ b/html/frvt_twins_demonstration.html
@@ -1918,7 +1918,8 @@ _setUpTrackersIfReady()||(document.addEventListener?document.addEventListener("D
 </script>
 </head>
 <hr />
-<p><font size="4"><a href="https://pages.nist.gov/frvt/agreements/frvt_participation_agreement.pdf">Participation Agreement</a> |
+<p><font size="4"><a href="https://pages.nist.gov/frvt/reports/twins/11/frvt_twins_9A_NISTIR_8439.pdf">Report - NISTIR 8439</a> |
+<a href="https://pages.nist.gov/frvt/agreements/frvt_participation_agreement.pdf">Participation Agreement</a> |
 <a href="https://pages.nist.gov/frvt/api/FRVT_Twins_Demo_concept_v1.pdf">Concept Document</a> |
 <a href="https://pages.nist.gov/frvt/api/FRVT_ongoing_11_api.pdf">API</a> |
 <a href="https://github.com/usnistgov/frvt">Validation</a> | <a href="https://www.nist.gov/itl/iad/image-group/products-and-services/encrypting-softwaredata-transmission-nist">Encryption</a> </font></p>
@@ -1928,8 +1929,8 @@ _setUpTrackersIfReady()||(document.addEventListener?document.addEventListener("D
 Status
 </h2>
 </summary>
-<b>[2022-09-01]</b>
-Coming in Q4 2022
+<b>[2022-09-27]</b> NIST Interagency Report 8439: FRVT Part 9A: Face Recognition Verification Accuracy on Distinguishing Twins <br>
+<b>[2022-09-27]</b> Submission starts October 31, 2022.
 </details>
 <hr />
 <details open>
@@ -1961,8 +1962,8 @@ submission package. More details are provided below.</p>
 <p>All organizations who seek to participate in FRVT must sign and submit all
 pages of this <a href="https://www.nist.gov/document/frvtparticipationagreementpdf">Participation
 Agreement</a> and
-send a PDF scanned copy to <a href="mailto:frvt@nist.gov">frvt@nist.gov</a>. [NOTE:]
-Organizations that have already submitted a participation agreement for FRVT
+send a PDF scanned copy to <a href="mailto:frvt@nist.gov">frvt@nist.gov</a>.<br><br />
+[NOTE:] Organizations that have already submitted a participation agreement for FRVT
 Ongoing 1:1 do not need to send in a new participation agreement UNLESS the
 organization updates their cryptographic signing key. [last update: 2022-09-01]</p>
 </div>
