Updates to FRVT html files
1. Updated quality results
2. New left-sidebar quality entry.
3. New language on twins.
4. New text above demographics tables on 1:1 page and demographics page.

--- a/html/frvt_pad.html
+++ b/html/frvt_pad.html
@@ -1927,7 +1927,7 @@ Status
 <p></summary>
 <b>[2022-09-21]</b>
 A third version of the <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api_v1.1.pdf">API and test plan</a> has been posted, which
-includes additional information on input image and video data, and provides hardware specifications for the timing test.</p>
+includes additional information on input image and video data and hardware specifications for the timing test.</p>
 <p><b>[2022-08-29]</b>
 A second version of the API and test plan for the FRVT Presentation Attack Detection track has been posted. We are grateful to the organizations that commented on the initial 2022-03-23 draft.
 NIST will run an initial evaluation of software PAD implementations starting on November 1st, 2022 and will accept algorithm submissions between November 1st - 22nd, 2022. Developers may submit up to two PAD implementations to NIST by November 22nd, 2022. NIST will report results some weeks later. At that point, we will determine and announce whether the FRVT PAD evaluation will proceed on an ongoing basis.</p>
@@ -2034,7 +2034,7 @@ Related NIST Projects
 <a href="https://pages.nist.gov/frvt/html/frvt_morph.html">FRVT MORPH</a>
 </h5>
 <h5>
-<a href="https://pages.nist.gov/frvt/html/frvt_quality.html">FRVT Quality Summarization</a>
+<a href="https://pages.nist.gov/frvt/html/frvt_quality.html">FRVT Quality</a>
 </h5>
 <h5>
 <a href="https://pages.nist.gov/frvt/html/frvt_facemask.html">FRVT Face Mask Effects</a>
