--- a/html/frvt_pad.html
+++ b/html/frvt_pad.html
@@ -1926,7 +1926,7 @@ Status
 </h2>
 <p></summary>
 <b>[2022-09-30]</b>
-An updated version of the <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api_v1.2.pdf">API and test plan</a> has been posted, which
+An updated version of the <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api.pdf">API and test plan</a> has been posted, which
 includes additional information on input image data, algorithmic behavior, and metrics.</p>
 <p>NIST will run an initial evaluation of software PAD implementations starting on November 1st, 2022 and will accept algorithm submissions between November 1st - 22nd, 2022. Developers may submit up to two PAD implementations to NIST by November 22nd, 2022. NIST will report results some weeks later. At that point, we will determine and announce whether the FRVT PAD evaluation will proceed on an ongoing basis.</p>
 <p>A validation package will be published on <a href="https://github.com/usnistgov/frvt/tree/master">GitHub</a> in the upcoming weeks. The FRVT PAD <a href="https://github.com/usnistgov/frvt/blob/pad/pad/src/include/frvt_pad.h">API header file</a> and <a href="https://github.com/usnistgov/frvt/blob/pad/common/src/include/frvt_structs.h">supporting data structures</a> are currently available under a development branch.</p>
