--- a/html/frvt_pad.html
+++ b/html/frvt_pad.html
@@ -1918,7 +1918,7 @@ _setUpTrackersIfReady()||(document.addEventListener?document.addEventListener("D
 </script>
 </head>
 <hr />
-<p><font size="4"><a href="https://pages.nist.gov/frvt/agreements/frvt_participation_agreement.pdf">Participation Agreement</a> | <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api_v1.0.pdf">API</a> | <a href="https://github.com/usnistgov/frvt">Validation</a> | <a href="https://www.nist.gov/itl/iad/image-group/products-and-services/encrypting-softwaredata-transmission-nist">Encryption</a> </font></p>
+<p><font size="4"><a href="https://pages.nist.gov/frvt/agreements/frvt_participation_agreement.pdf">Participation Agreement</a> | <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api.pdf">API</a> | <a href="https://github.com/usnistgov/frvt">Validation</a> | <a href="https://www.nist.gov/itl/iad/image-group/products-and-services/encrypting-softwaredata-transmission-nist">Encryption</a> </font></p>
 <details open>
 <summary>
 <h2>
@@ -1965,7 +1965,7 @@ organization updates their cryptographic signing key. [last update: 2022-08-29]<
 </div>
 <div id="api-document" class="section level3">
 <h3>API Document</h3>
-<p>A definitive <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api_v1.0.pdf">API
+<p>A definitive <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api.pdf">API
 document</a> has been published.
 All algorithms submitted must adhere to the published C++ API.
 [last update: 2022-08-29]</p>
