--- a/html/frvt_pad.html
+++ b/html/frvt_pad.html
@@ -1924,12 +1924,10 @@ _setUpTrackersIfReady()||(document.addEventListener?document.addEventListener("D
 <h2>
 Status
 </h2>
-<p></summary>
-<b>[2022-09-30]</b>
-An updated version of the <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api.pdf">API and test plan</a> has been posted, which
-includes additional information on input image data, algorithmic behavior, and metrics.</p>
-<p>NIST will run an initial evaluation of software PAD implementations starting on November 1st, 2022 and will accept algorithm submissions between November 1st - 22nd, 2022. Developers may submit up to two PAD implementations to NIST by November 22nd, 2022. NIST will report results some weeks later. At that point, we will determine and announce whether the FRVT PAD evaluation will proceed on an ongoing basis.</p>
-<p>A validation package will be published on <a href="https://github.com/usnistgov/frvt/tree/master">GitHub</a> in the upcoming weeks. The FRVT PAD <a href="https://github.com/usnistgov/frvt/blob/pad/pad/src/include/frvt_pad.h">API header file</a> and <a href="https://github.com/usnistgov/frvt/blob/pad/common/src/include/frvt_structs.h">supporting data structures</a> are currently available under a development branch.</p>
+<p></summary></p>
+<p><b>[2022-10-04]</b>
+An updated version of the <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api.pdf">API and test plan</a> has been posted. Additionally, a validation package has been published on <a href="https://github.com/usnistgov/frvt/tree/master">GitHub</a>, which includes the definitive FRVT PAD API header file and supporting data structures.</p>
+NIST will run an initial evaluation of software PAD implementations starting on November 1st, 2022 and will accept algorithm submissions between November 1st - 22nd, 2022. Developers may submit up to two PAD implementations to NIST by November 22nd, 2022. NIST will report results some weeks later. At that point, we will determine and announce whether the FRVT PAD evaluation will proceed on an ongoing basis.
 </details>
 <hr />
 <details open>
@@ -1968,16 +1966,15 @@ organization updates their cryptographic signing key. [last update: 2022-08-29]<
 <p>A definitive <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api.pdf">API
 document</a> has been published.
 All algorithms submitted must adhere to the published C++ API.
-[last update: 2022-08-29]</p>
+[last update: 2022-10-04]</p>
 </div>
 <div id="validation" class="section level3">
 <h3>Validation</h3>
-<p>A <a href="https://github.com/usnistgov/frvt">validation package</a> will be published
-in the upcoming weeks.
-All participants must run their software through the updated validation package
+<p>A <a href="https://github.com/usnistgov/frvt">validation package</a> has been published.
+All participants must run their software through the validation package
 prior to submission. The purpose of validation is to ensure consistent
 algorithm output between your execution and NIST’s execution. [last update:
-2022-08-29]</p>
+2022-10-04]</p>
 </div>
 <div id="encryption" class="section level3">
 <h3>Encryption</h3>
