--- a/html/frvt_pad.html
+++ b/html/frvt_pad.html
@@ -1926,7 +1926,7 @@ Status
 </h2>
 <p></summary></p>
 <p><b>[2022-10-04]</b>
-An updated version of the <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api.pdf">API and test plan</a> has been posted. Additionally, a validation package has been published on <a href="https://github.com/usnistgov/frvt/tree/master">GitHub</a>, which includes the definitive FRVT PAD API header file and supporting data structures.</p>
+An updated version of the <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api.pdf">API and test plan</a> has been posted. Additionally, a validation package has been published on <a href="https://github.com/usnistgov/frvt/tree/master">GitHub</a>, which includes the definitive FRVT PAD API header file and supporting data structures. All participants must run their software through the validation package prior to submission.</p>
 NIST will run an initial evaluation of software PAD implementations starting on November 1st, 2022 and will accept algorithm submissions between November 1st - 22nd, 2022. Developers may submit up to two PAD implementations to NIST by November 22nd, 2022. NIST will report results some weeks later. At that point, we will determine and announce whether the FRVT PAD evaluation will proceed on an ongoing basis.
 </details>
 <hr />
