--- a/html/frvt_twins_demonstration.html
+++ b/html/frvt_twins_demonstration.html
@@ -1929,6 +1929,7 @@ _setUpTrackersIfReady()||(document.addEventListener?document.addEventListener("D
 Status
 </h2>
 </summary>
+<b>[2022-10-13]</b> Validation package has been published on <a href="https://github.com/usnistgov/frvt/tree/master">GitHub</a>, all participants must run their software through the validation package prior to submission.<br>
 <b>[2022-09-27]</b> NIST Interagency Report 8439: FRVT Part 9A: Face Recognition Verification Accuracy on Distinguishing Twins <br>
 <b>[2022-09-27]</b> Submission starts October 31, 2022.
 </details>
@@ -1978,10 +1979,10 @@ All algorithms submitted must adhere to the published C++ API. Developers must s
 3. An email that explicitly requests entry into the FRVT Twins Demonstration track. [last update: 2022-09-01]</p>
 <p>
 <p><b>[Validation]</b>
-The <a href="https://github.com/usnistgov/frvt">validation package</a> will be published later.
+A <a href="https://github.com/usnistgov/frvt">validation package</a> has been published.
 All participants must run their software through the updated validation package
 prior to submission. The purpose of validation is to ensure that NIST can exactly reproduce
-developer-submitted algorithm outputs. [last update: 2022-09-01]</p>
+developer-submitted algorithm outputs. [last update: 2022-10-13]</p>
 <p>
 <p><b>[Encryption]</b>
 All submissions must be properly encrypted and signed before transmission to
