--- a/html/frvt_pad.html
+++ b/html/frvt_pad.html
@@ -1961,7 +1961,7 @@ submission package. More details are provided below.</p>
 <div id="participation-agreement" class="section level3">
 <h3>Participation Agreement</h3>
 <p>All organizations who seek to participate in FRVT must sign and submit all
-pages of this <a href="https://www.nist.gov/document/frvtparticipationagreementpdf">Participation
+pages of this <a href="https://pages.nist.gov/frvt/agreements/frvt_participation_agreement.pdf">Participation
 Agreement</a> and
 send a PDF scanned copy to <a href="mailto:frvt@nist.gov">frvt@nist.gov</a>. [NOTE:]
 Organizations that have already submitted a participation agreement for FRVT
