--- a/html/frvt_pad.html
+++ b/html/frvt_pad.html
@@ -1925,7 +1925,9 @@ _setUpTrackersIfReady()||(document.addEventListener?document.addEventListener("D
 Status
 </h2>
 <p></summary>
-<b>[2022-10-17]</b>
+<b>[2022-12-12]</b>
+An updated version of the <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api.pdf">API and test plan</a> and validation package has been posted. The update adds an optional parameter that developers can use to provide additional information/feedback on media properties and their relationship to the PAD decision. All participants must run their software through the validation package prior to submission.</p>
+<p><b>[2022-10-17]</b>
 Based on developer feedback, we’ve decided to update the participation rules and deadlines for the upcoming FRVT PAD benchmark.<br></p>
 <p>NIST will run an initial evaluation of software PAD implementations starting on January 3rd, 2023 and will accept algorithm submissions between January 3rd – February 28th, 2023. Developers may submit up to two PAD implementations to NIST by February 28th, 2023. For each submission, NIST will provide feedback to developers in the form of an algorithm report card approximately 2 - 3 weeks after a working algorithm is received. The algorithm report cards will only be shared with developers as interim feedback. After February 28th, NIST will publicly report results for all algorithms received some weeks later. At that point, we will determine and announce whether the FRVT PAD evaluation will proceed on an ongoing basis.</p>
 <p>The following rules apply: <br>
@@ -1933,8 +1935,6 @@ Based on developer feedback, we’ve decided to update the participation rules a
 - Submissions received after February 14th may not receive an algorithm report card. <br>
 - Developers may choose to submit a first algorithm, wait to receive an algorithm report card, then submit a second algorithm. <br>
 - Developers may implement the PAD API function for impersonation PAs, evasion PAs, or both. There is no penalty for implementing only one of the PAD functions.</p>
-<b>[2022-10-04]</b>
-An updated version of the <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api.pdf">API and test plan</a> has been posted. Additionally, a validation package has been published on <a href="https://github.com/usnistgov/frvt/tree/master">GitHub</a>, which includes the definitive FRVT PAD API header file and supporting data structures. All participants must run their software through the validation package prior to submission.
 </details>
 <hr />
 <details open>
