Updates to FRVT PAD API

--- a/html/frvt_pad.html
+++ b/html/frvt_pad.html
@@ -1925,7 +1925,10 @@ _setUpTrackersIfReady()||(document.addEventListener?document.addEventListener("D
 Status
 </h2>
 <p></summary>
-<b>[2022-12-12]</b>
+<b>[2023-01-03]</b>
+An updated version of the <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api.pdf">API and test plan</a> has been posted. The update provides some examples of when algorithms should report an evasion attack related to occlusion.</p>
+<p>NIST is now accepting algorithm submissions between January 3rd – February 28th, 2023.</p>
+<p><b>[2022-12-12]</b>
 An updated version of the <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api.pdf">API and test plan</a> and validation package has been posted. The update adds an optional parameter that developers can use to provide additional information/feedback on media properties and their relationship to the PAD decision. All participants must run their software through the validation package prior to submission.</p>
 <p><b>[2022-10-17]</b>
 Based on developer feedback, we’ve decided to update the participation rules and deadlines for the upcoming FRVT PAD benchmark.<br></p>
