--- a/html/frvt_pad.html
+++ b/html/frvt_pad.html
@@ -1924,8 +1924,29 @@ _setUpTrackersIfReady()||(document.addEventListener?document.addEventListener("D
 <h2>
 Status
 </h2>
-<p></summary>
-<b>[2023-02-01]</b>
+<p></summary></p>
+<html>
+
+    <head>
+      <style>
+        .status{
+          background-color: red;
+          font-size: 150%;
+          text-align: center;
+        }
+        
+      </style>
+    <title>Status</title>
+    </head>
+
+    <body>
+
+      <div class="status"> <b>[2023-04-06]</b>   FRVT WILL BE CLOSED UNTIL May 1st, 2023. </div>
+
+    </body>
+</html>
+
+<p><b>[2023-02-01]</b>
 An updated version of the <a href="https://pages.nist.gov/frvt/api/FRVT_pad_api.pdf">API and test plan</a> has been posted. The update provides clarifications on the exclusion of commonly used surgical/medical masks in our evaluation of impersonation attacks.</p>
 <p>NIST is now accepting algorithm submissions between January 3rd – February 28th, 2023.</p>
 <p><b>[2022-10-17]</b>
