--- a/html/frvt_pad.html
+++ b/html/frvt_pad.html
@@ -2048,6 +2048,9 @@ Related NIST Projects
 <h5>
 <a href="https://pages.nist.gov/frvt/html/frvt_twins_demonstration.html">FRVT Twins Demonstration</a>
 </h5>
+<h5>
+<a href="https://pages.nist.gov/frvt/html/frvt_age_estimation.html">FRVT Age Estimation</a>
+</h5>
 <p><br></p>
 <div class="tocify-extend-page" data-unique="tocify-extend-page" style="height: 0;">
 
