Pushing updated submission instructions for FRVT evaluation

--- a/html/frvt_age_estimation.html
+++ b/html/frvt_age_estimation.html
@@ -1959,14 +1959,9 @@ libraries through the provided validation package (which creates a submission
 package), encrypt the package, and provide a download link for the encrypted
 submission package.</p>
 <p>
-<b>[Participation agreement]</b>
-Organizations seeking to participate in FRVT must sign and submit all pages of this
-<a href="https://pages.nist.gov/frvt/agreements/frvt_participation_agreement.pdf">Participation Agreement</a>
-and send a PDF scanned copy to <a href="mailto:frvt@nist.gov">frvt@nist.gov</a>.
-Organizations that have already submitted to other FRVT tracks do not need to send in a
-new participation agreement UNLESS the organization updates their cryptographic
-signing key. [last update: 2023-07-03]
-</p>
+<p><b>[Participation agreement]</b>
+FRVT is conducted by NIST, an agency of the United States Government. Participation is free of charge. FRVT is open to a global audience of face recognition developers. All organizations who seek to participate in FRVT must sign all pages of this
+<a href="https://pages.nist.gov/frvt/agreements/frvt_participation_agreement.pdf">Participation Agreement</a> and submit it with their algorithm submission using the <a href="https://pages.nist.gov/frvt/html/frvt_submission_form.html">FRVT Submission Form</a>. [last update: 2023-07-03]</p>
 <p>
 <p><b>[API]</b>
 API document will be avaliable after the comment period is over. All FRVT APIs reference the supporting FRVT General Evaluation Specifications, which includes hardware and operating system environment, software requirements, reporting, and common data structures that support the APIs. [last update: 2023-07-03]</p>
@@ -1986,16 +1981,8 @@ must correspond to the participant’s public-key fingerprint provided on the
 signed Participation Application. [last update: 2022-07-03]</p>
 <p>
 <p><b>[Submission]</b>
-Encrypted files below 20MB can be emailed to NIST at
-<a href="mailto:frvt@nist.gov">frvt@nist.gov</a>. Encrypted files above 20MB can be
-provided as a download link from a generic http webserver (e.g., Google Drive).
-We cannot accept Dropbox links. NIST will not register, or establish any kind
-of membership, on the provided website. Participants can submit their
-algorithm(s) as soon as the signed participation agreement is sent to NIST.
-There is no need to wait for NIST confirmation of the received agreement.
-Participants must <a href="mailto:frvt-news+subscribe@list.nist.gov">subscribe</a> to the
-FRVT mailing list to receive emails when new reports are published or
-announcements are made. [last update: 2022-07-03]</p>
+All algorithm submissions must be submitted through the <a href="https://pages.nist.gov/frvt/html/frvt_submission_form.html">FRVT Submission Form</a>, which requires encrypted files be provided as a download link from a generic http server (e.g., Google Drive). We cannot accept Dropbox links. NIST will not register, or establish any kind of membership, on the provided website. Participants can submit their algorithm(s), participation agreement, and GPG key at the same time via the submission form. [last update: 2023-07-03]</p>
+<p>Participants must <a href="mailto:frvt-news+subscribe@list.nist.gov">subscribe</a> to the FRVT mailing list to receive emails when new reports are published or announcements are made.</p>
 </details>
 <hr />
 <details open>
